tests/ui/traits/alias/issue-108072-unmet-trait-alias-bound.stderr
error[E0277]: the trait `IteratorAlias` is not implemented for `()`
  --> $DIR/issue-108072-unmet-trait-alias-bound.rs:10:7
   |
LL |     f(())
   |     - ^^ the trait `IteratorAlias` is not implemented for `()`, which is required by `(): IteratorAlias`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `()` to implement `IteratorAlias`
note: required by a bound in `f`
  --> $DIR/issue-108072-unmet-trait-alias-bound.rs:7:14
   |
LL | fn f(_: impl IteratorAlias) {}
   |              ^^^^^^^^^^^^^ required by this bound in `f`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
